--- a/screen1.html
+++ b/screen1.html
@@ -77,6 +77,14 @@
         }
 
         .result-card {
+            background-color: #ffffff;
+            border-top: 1px solid #dee2e6;
+            border-right: 1px solid #dee2e6;
+            border-bottom: 1px solid #dee2e6;
+            border-left: 4px solid #17a2b8; /* MODIFIED: Bar now on the whole card */
+            border-radius: 12px;
+            padding: 25px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
             margin-bottom: 20px;
             transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
@@ -129,10 +137,9 @@
             line-height: 1.6;
             color: #495057;
             margin-bottom: 20px;
-            border-left: 3px solid #17a2b8;
-            padding-left: 15px;
+            padding: 15px; /* MODIFIED: Consistent padding */
             background-color: #f8f9fa;
-            border-radius: 0 4px 4px 0;
+            border-radius: 8px; /* MODIFIED: Rounded corners */
         }
         
         /* (E) Keywords */
