--- a/screen1.html
+++ b/screen1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plastic AI Knowledge System - Search</title>
+    <title>Plastic AI Knowledge Playground - Search</title>
     <style>
         /* Google Fonts: Inter */
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
