--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            text-decoration: none; /* Added for link */
         }
         .search-button .icon {
             width: 24px;
@@ -152,12 +153,12 @@
             </p>
 
             <div class="search-container">
-                <input type="text" class="main-search-bar" placeholder="Ask anything about plastics">
-                <button class="search-button" aria-label="Search">
+                <input type="text" class="main-search-bar" placeholder="Ask anything about plastic actions">
+                <a href="https://impactpath.github.io/plastic/screen1.html" class="search-button" aria-label="Search">
                     <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
                     </svg>
-                </button>
+                </a>
             </div>
 
             <div class="trending-searches">
