--- a/screen1.html
+++ b/screen1.html
@@ -63,7 +63,7 @@
             font-size: 26px;
             font-weight: 700;
             margin: 0;
-            color: #0d6efd; /* MODIFIED: Unified color */
+            color: #0d6efd; 
         }
 
 
@@ -167,7 +167,6 @@
         .sidebar-card {
             position: sticky;
             top: 20px;
-            /* MODIFIED: Removed gradient */
         }
         .sidebar-card h3 {
             font-size: 20px;
@@ -180,7 +179,7 @@
             color: #6c757d;
             margin-bottom: 25px;
             line-height: 1.5;
-            background-color: #f1f3f5; /* MODIFIED: Restored gray box */
+            background-color: #f1f3f5;
             padding: 15px;
             border-radius: 8px;
         }
@@ -190,7 +189,7 @@
             font-size: 16px;
             font-weight: 700;
             color: #fff;
-            background-color: #0d6efd; /* MODIFIED: Unified color */
+            background-color: #0d6efd;
             border: none;
             border-radius: 10px;
             cursor: pointer;
@@ -203,7 +202,7 @@
         }
         .chat-button:hover {
             transform: translateY(-2px);
-            background-color: #0b5ed7; /* MODIFIED: Darker shade for hover */
+            background-color: #0b5ed7;
             box-shadow: 0 6px 20px rgba(13, 110, 253, 0.3);
         }
         .chat-button .icon {
@@ -234,7 +233,8 @@
                 <article class="result-card">
                     <div class="card-header">
                         <span class="doc-type">Report</span>
-                        <h3 class="card-title"><a href="#">Global Plastics Outlook: Policy Scenarios to 2060</a></h3>
+                        <!-- MODIFIED: Added link to screen2.html -->
+                        <h3 class="card-title"><a href="https://impactpath.github.io/plastic/screen2.html">Global Plastics Outlook: Policy Scenarios to 2060</a></h3>
                     </div>
                     <p class="metadata">
                         <span class="author">OECD Environment Directorate</span> | <span class="year">2022</span>
