--- a/screen2.html
+++ b/screen2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plastic AI Knowledge System - Document Analysis</title>
+    <title>Plastic AI Knowledge Playground- Document Analysis</title>
     <style>
         /* Google Fonts: Inter */
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
@@ -97,6 +97,7 @@
             border-radius: 8px;
             transition: background-color 0.2s;
             flex-shrink: 0;
+            /* margin-top: 10px; /* MODIFIED: Added for slight vertical adjustment */
         }
         .source-link-btn:hover {
             background-color: #d0d4d7;
@@ -234,7 +235,7 @@
     <div class="container">
         <!-- Main Content (AI Analysis Panel) -->
         <main class="main-content">
-            <a href="#" class="back-link">
+            <a href="https://impactpath.github.io/plastic/screen1.html" class="back-link">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18" /></svg>
                 <span>Back to Search Results</span>
             </a>
@@ -315,7 +316,6 @@
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" /></svg>
                     </button>
                 </div>
-                <!-- MODIFIED: Suggested questions are now specific to the document -->
                 <div class="suggested-questions">
                     <button class="suggested-q">What is the 2060 projection for leakage?</button>
                     <button class="suggested-q">Which policies are most effective?</button>
