--- a/screen2.html
+++ b/screen2.html
@@ -97,7 +97,7 @@
             border-radius: 8px;
             transition: background-color 0.2s;
             flex-shrink: 0;
-            /* margin-top: 10px; /* MODIFIED: Added for slight vertical adjustment */
+            margin-top: 10px;
         }
         .source-link-btn:hover {
             background-color: #d0d4d7;
