--- a/screen1.html
+++ b/screen1.html
@@ -408,5 +408,16 @@
         </aside>
     </div>
 
+    <!-- MODIFIED: Added JavaScript for the popup -->
+    <script>
+        function openChatPopup() {
+            const url = 'https://impactpath.github.io/plastic/screen3.html';
+            const windowName = 'ChatPopup';
+            // Set features for a popup window that looks like a chat modal
+            const windowFeatures = 'width=800,height=750,resizable=yes,scrollbars=yes,status=yes';
+            window.open(url, windowName, windowFeatures);
+        }
+    </script>
+    
 </body>
 </html>
