--- a/screen3.html
+++ b/screen3.html
@@ -60,11 +60,14 @@
             font-size: 14px;
             color: #6c757d;
         }
+        /* MODIFIED: Styles for the link acting as a button */
         .close-btn {
             background: none;
             border: none;
             cursor: pointer;
             color: #6c757d;
+            padding: 0; 
+            line-height: 0; /* Ensures icon is vertically centered */
         }
         .close-btn .icon {
             width: 28px;
@@ -207,16 +210,16 @@
                     <h3>Chat with AI</h3>
                     <span class="context-info">Based on 9 search results</span>
                 </div>
-                <button class="close-btn" onclick="window.close()">
+                <!-- MODIFIED: Changed button to a link that navigates to screen1 -->
+                <a href="https://impactpath.github.io/plastic/screen1.html" class="close-btn" aria-label="Close">
                     <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" /></svg>
-                </button>
+                </a>
             </header>
             
             <main class="chat-body">
                 <!-- User Message -->
                 <div class="chat-message user">
                     <div class="avatar">
-                        <!-- MODIFIED: Reverted to SVG Icon -->
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" /></svg>
                     </div>
                     <div class="message-content">
@@ -227,7 +230,6 @@
                 <!-- AI Message -->
                 <div class="chat-message ai">
                     <div class="avatar">
-                        <!-- MODIFIED: Reverted to SVG Icon -->
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M8.25 3v1.5M4.5 8.25H3m18 0h-1.5M4.5 12H3m18 0h-1.5m-15 3.75H3m18 0h-1.5M8.25 21v-1.5M12 3v1.5m0 15V21m3.75-18v1.5m0 15V21m-9-1.5h10.5a2.25 2.25 0 002.25-2.25V6.75a2.25 2.25 0 00-2.25-2.25H6.75A2.25 2.25 0 004.5 6.75v10.5a2.25 2.25 0 002.25 2.25zm.75-12h9v9h-9v-9z" /></svg>
                     </div>
                     <div class="message-content">
