--- a/screen1.html
+++ b/screen1.html
@@ -50,9 +50,8 @@
             margin-bottom: 25px;
         }
 
-        /* MODIFIED: Applied Grok/Perplexity style from landing page */
         .headline {
-            font-size: 32px; /* Adjusted size for screen 1 */
+            font-size: 32px; 
             font-weight: 800;
             line-height: 1.2;
             margin: 0;
@@ -62,7 +61,7 @@
             background-size: 200% 200%;
             text-shadow: 0 0 30px rgba(13, 110, 253, 0.25), 0 0 40px rgba(236, 72, 153, 0.25);
             animation: gradient-animation 10s ease infinite;
-            text-align: left; /* Align to the left */
+            text-align: left; 
         }
 
         .headline a {
@@ -192,10 +191,14 @@
             padding: 15px;
             border-radius: 8px;
         }
+        /* MODIFIED: Wrapper for centering the button */
+        .chat-button-wrapper {
+            text-align: center;
+        }
         .chat-button {
-            width: 100%;
-            padding: 14px;
-            font-size: 16px;
+            /* MODIFIED: Removed width, using padding to define size */
+            padding: 12px 20px; 
+            font-size: 15px;
             font-weight: 700;
             color: #fff;
             background-color: #0d6efd;
@@ -203,7 +206,7 @@
             border-radius: 10px;
             cursor: pointer;
             transition: all 0.3s ease;
-            display: flex;
+            display: inline-flex; /* MODIFIED: To wrap content */
             align-items: center;
             justify-content: center;
             gap: 10px;
@@ -228,7 +231,6 @@
         <!-- Main Content (Search Results) -->
         <main class="main-content">
             <header class="system-header">
-                <!-- MODIFIED: Removed icon and applied new style to h1 -->
                 <h1 class="headline"><a href="https://impactpath.github.io/plastic/index.html">Plastic AI Knowledge Playground</a></h1>
             </header>
             
@@ -393,12 +395,15 @@
                 <p class="chat-info">
                     Based on the 9 search results,<br>you can ask more in-depth questions.
                 </p>
-                <a href="https://impactpath.github.io/plastic/screen3.html" target="_blank" rel="noopener noreferrer" class="chat-button">
-                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 9.75a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H8.25m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H12m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0h-.375m-13.5 3.01c0 1.6 1.123 2.994 2.707 3.227 1.087.16 2.185.283 3.293.369V21l4.184-4.183a1.14 1.14 0 01.778-.332 48.294 48.294 0 005.83-.498c1.585-.233 2.708-1.626 2.708-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z" />
-                    </svg>
-                    <span>Start Chat with AI</span>
-                </a>
+                <!-- MODIFIED: Wrapped button in a div for centering -->
+                <div class="chat-button-wrapper">
+                    <a href="https://impactpath.github.io/plastic/screen3.html" target="_blank" rel="noopener noreferrer" class="chat-button">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 9.75a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H8.25m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H12m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0h-.375m-13.5 3.01c0 1.6 1.123 2.994 2.707 3.227 1.087.16 2.185.283 3.293.369V21l4.184-4.183a1.14 1.14 0 01.778-.332 48.294 48.294 0 005.83-.498c1.585-.233 2.708-1.626 2.708-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z" />
+                        </svg>
+                        <span>Start Chat with AI Assistant</span>
+                    </a>
+                </div>
             </div>
         </aside>
     </div>
