--- a/screen2.html
+++ b/screen2.html
@@ -171,7 +171,7 @@
         /* --- Sidebar (Chatbot Area) --- */
         .sidebar-card {
             position: sticky;
-            top: 60px;
+            top: 44px;
         }
         .sidebar-card h3 {
             font-size: 20px;
@@ -278,24 +278,25 @@
 
                 <section class="analysis-section">
                     <h3>Related Documents</h3>
+                    <!-- MODIFIED: Added links to related documents -->
                     <div class="related-doc-card">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" /></svg>
                         <div>
-                            <h4><a href="#">Breaking the Plastic Wave: A Comprehensive Assessment</a></h4>
+                            <h4><a href="https://www.systemiq.earth/breakingtheplasticwave/" target="_blank" rel="noopener noreferrer">Breaking the Plastic Wave: A Comprehensive Assessment</a></h4>
                             <p>The Pew Charitable Trusts & SYSTEMIQ (2020)</p>
                         </div>
                     </div>
                     <div class="related-doc-card">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" /></svg>
                         <div>
-                            <h4><a href="#">The New Plastics Economy: Rethinking the future of plastics</a></h4>
+                            <h4><a href="https://www.ellenmacarthurfoundation.org/the-new-plastics-economy-rethinking-the-future-of-plastics" target="_blank" rel="noopener noreferrer">The New Plastics Economy: Rethinking the future of plastics</a></h4>
                             <p>Ellen MacArthur Foundation (2016)</p>
                         </div>
                     </div>
                     <div class="related-doc-card">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" /></svg>
                         <div>
-                            <h4><a href="#">Production, use, and fate of all plastics ever made</a></h4>
+                            <h4><a href="https://www.science.org/doi/10.1126/sciadv.1700782" target="_blank" rel="noopener noreferrer">Production, use, and fate of all plastics ever made</a></h4>
                             <p>Geyer, R., Jambeck, J. R., & Law, K. L. (2017)</p>
                         </div>
                     </div>
