--- a/index.html
+++ b/index.html
@@ -186,9 +186,10 @@
 
             <div class="trending-searches">
                 <strong>Trending:</strong>
+                <!-- MODIFIED: Changed order and content of trending tags -->
+                <a href="#" class="trending-tag">Microplastic Pollution</a>
                 <a href="#" class="trending-tag">Bioplastics from Algae</a>
                 <a href="#" class="trending-tag">EPR Policy in Southeast Asia</a>
-                <a href="#" class="trending-tag">Microplastics in Bottled Water</a>
             </div>
         </div>
     </div>
