--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
 
             <div class="trending-searches">
                 <strong>Trending:</strong>
-                <!-- MODIFIED: Changed order and content of trending tags -->
-                <a href="#" class="trending-tag">Microplastic Pollution</a>
-                <a href="#" class="trending-tag">Bioplastics from Algae</a>
-                <a href="#" class="trending-tag">EPR Policy in Southeast Asia</a>
+                <!-- MODIFIED: Added links to all trending tags -->
+                <a href="https://impactpath.github.io/plastic/screen1.html" class="trending-tag">Microplastic Pollution</a>
+                <a href="https://impactpath.github.io/plastic/screen1.html" class="trending-tag">Bioplastics from Algae</a>
+                <a href="https://impactpath.github.io/plastic/screen1.html" class="trending-tag">EPR Policy in Southeast Asia</a>
             </div>
         </div>
     </div>
