--- a/screen1.html
+++ b/screen1.html
@@ -29,6 +29,7 @@
 
         .main-content {
             flex-grow: 1;
+            min-width: 0; /* Prevents content from overflowing container */
         }
 
         .sidebar {
@@ -191,12 +192,10 @@
             padding: 15px;
             border-radius: 8px;
         }
-        /* MODIFIED: Wrapper for centering the button */
         .chat-button-wrapper {
             text-align: center;
         }
         .chat-button {
-            /* MODIFIED: Removed width, using padding to define size */
             padding: 12px 20px; 
             font-size: 15px;
             font-weight: 700;
@@ -206,7 +205,7 @@
             border-radius: 10px;
             cursor: pointer;
             transition: all 0.3s ease;
-            display: inline-flex; /* MODIFIED: To wrap content */
+            display: inline-flex; 
             align-items: center;
             justify-content: center;
             gap: 10px;
@@ -221,6 +220,31 @@
         .chat-button .icon {
             width: 20px;
             height: 20px;
+        }
+
+        /* --- MODIFIED: Media Queries for Responsive Design --- */
+        @media (max-width: 992px) {
+            .container {
+                flex-direction: column;
+            }
+            .sidebar {
+                width: 100%;
+            }
+            .sidebar-card {
+                position: static; /* Remove sticky position on smaller screens */
+            }
+        }
+
+        @media (max-width: 768px) {
+            body {
+                padding: 15px;
+            }
+            .headline {
+                font-size: 28px;
+            }
+            .card-title a {
+                font-size: 18px;
+            }
         }
 
     </style>
@@ -395,7 +419,6 @@
                 <p class="chat-info">
                     Based on the 9 search results,<br>you can ask more in-depth questions.
                 </p>
-                <!-- MODIFIED: Wrapped button in a div for centering -->
                 <div class="chat-button-wrapper">
                     <a href="https://impactpath.github.io/plastic/screen3.html" target="_blank" rel="noopener noreferrer" class="chat-button">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
