--- a/screen2.html
+++ b/screen2.html
@@ -29,6 +29,7 @@
 
         .main-content {
             flex-grow: 1;
+            min-width: 0; /* Prevents content from overflowing container */
         }
 
         .sidebar {
@@ -75,6 +76,8 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            flex-wrap: wrap; /* Allow wrapping on small screens */
+            gap: 10px;
             margin-bottom: 30px;
         }
         
@@ -97,7 +100,6 @@
             border-radius: 8px;
             transition: background-color 0.2s;
             flex-shrink: 0;
-            margin-top: 10px;
         }
         .source-link-btn:hover {
             background-color: #d0d4d7;
@@ -171,7 +173,7 @@
         /* --- Sidebar (Chatbot Area) --- */
         .sidebar-card {
             position: sticky;
-            top: 44px;
+            top: 20px;
         }
         .sidebar-card h3 {
             font-size: 20px;
@@ -228,6 +230,31 @@
             background-color: #d0d4d7;
         }
 
+        /* --- MODIFIED: Media Queries for Responsive Design --- */
+        @media (max-width: 992px) {
+            .container {
+                flex-direction: column;
+            }
+            .sidebar {
+                width: 100%;
+            }
+            .sidebar-card {
+                position: static; /* Remove sticky position on smaller screens */
+            }
+        }
+
+        @media (max-width: 768px) {
+            body {
+                padding: 15px;
+            }
+            .analysis-panel .doc-title {
+                font-size: 24px;
+            }
+            .analysis-section h3 {
+                font-size: 18px;
+            }
+        }
+
     </style>
 </head>
 <body>
@@ -278,7 +305,6 @@
 
                 <section class="analysis-section">
                     <h3>Related Documents</h3>
-                    <!-- MODIFIED: Added links to related documents -->
                     <div class="related-doc-card">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" /></svg>
                         <div>
